# chess-bot

./: .gitignore  API.md  DESIGN.md  DEVELOPMENT.md  Dockerfile  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bots/: greedy_bot.py  random_bot.py
chessbot/: __init__.py  models.py
chessbot/services/: __init__.py  match_runner.py  monitoring.py  sandbox.py  scheduler.py  standings.py  storage.py
chessbot/static/: admin.html  index.html  match.html  style.css  tournaments.html
chessbot/static/js/: admin.js  app.js  match.js  tournament.js  utils.js
chessbot/tests/: __init__.py  test_api.py  test_match_runner.py  test_scheduler.py
chessbot/web/: __init__.py  app.py
scripts/: run_server.sh  run_tournament.sh
src/: board.py  game.py  main.py  pieces.py  players.py
