[project]
name = "chess-bot-platform"
version = "1.0.0"
description = "Chess bot competition platform with tournaments, sandboxed bot execution, and modern web UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Chess Bot Platform"}]
license = {text = "MIT"}

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-chess>=1.999",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
ci = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

dev = [
  "black>=24.0",
  "ruff>=0.1.0",
  "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["chessbot/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
